dev : formation script first steps

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .Rhistory
 .Rapp.history
 
-JADORE LES CONFLITS
 # Session Data files
 .RData
 
@@ -43,3 +42,4 @@ vignettes/*.pdf
 .Renviron
 
 
+/.project
